--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@
 
 .button-secondary {
   color: rgba(255, 255, 255, 0.95);
-  background-color: rgb(60, 70, 2 02);
+  background-color: rgb(60, 70, 202);
 }
 
 .button-secondary:hover {
