Design: Farbschema angepasst und Schriftart fett gesetzt

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,81 +1,40 @@
-/* Tailwind base - put variables under: tailwind.config.js */
-@import "node_modules/tailwindcss/base";
-/* Tailwind component classes registered by plugins*/
-@import "node_modules/tailwindcss/components";
-/* Tailwind's utility classes - generated based on config file */
-@import "node_modules/tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-/*
-#
-# Buttons
-#
-*/
+@layer components {
+  .button-primary {
+    @apply text-white font-bold py-2 px-4 rounded;
+    background-color: rgb(249, 142, 0);
+  }
 
+  .button-primary:hover {
+    background-color: rgb(239, 130, 44);
+  }
 
-.button-primary {
-  background-color: rgb(249, 142, 0);
+  .button-secondary {
+    @apply font-bold py-2 px-4 rounded;
+    color: rgba(255, 255, 255, 0.95);
+    background-color: rgb(60, 70, 202);
+  }
+
+  .button-secondary:hover {
+    background-color: rgb(64, 138, 244);
+  }
+
+  #header-inner-wrapper {
+    background-color: rgba(230, 230, 236, 0.128);
+  }
+
+  #brand-headline {
+    color: rgb(249, 142, 0);
+  }
+
+  .prose h1 {
+    color: rgb(249, 142, 0);
+  }
+
+  .border-t {
+    border-color: rgb(249, 142, 0);
+  }
 }
-
-.button-primary:hover {
-  background-color: rgb(239, 130, 44);
-}
-
-.button-secondary {
-  color: rgba(255, 255, 255, 0.95);
-  background-color: rgb(60, 70, 202);
-}
-
-.button-secondary:hover {
-  background-color: rgb(64, 138, 244);
-}
-
-
-/*
-#
-# Top border color of form inputs
-#
-*/
-
-
-.border-t {
-  border-color: rgb(249, 142, 0);
-}
-*/
-
-/*
-#
-# Header Background & Text
-#
-*/
-
-
-#header-inner-wrapper {
-  background-color: rgba(26, 38, 191, 0.9);
-}
-
-#brand-headline {
-  color: rgb(249, 142, 0);
-}
-
-/*
-#tagline-paragraph {
-  color: rgba(255, 255, 255, 0.95);
-}
-*/
-
-/*
-#
-# Content below the header
-#
-*/
-
-
-.prose h1 {
-  color: rgb(249, 142, 0);
-}
-
-/*
-.prose p {
-  color: white;
-}
-*/
