--- a/layouts/partials/head/styling.html
+++ b/layouts/partials/head/styling.html
@@ -1,7 +1,7 @@
-<!-- See https://gohugo.io/hugo-pipes/postcss/ -->
+<!-- See https://gohugo.io/hugo-pipes/postprocess/#css-purging-with-postcss -->
 {{ $css := resources.Get "css/main.css" }}
-{{ $css = $css | css.PostCSS (dict "config" "postcss.config.cjs") }}
+{{ $css = $css | css.PostCSS }}
 {{ if hugo.IsProduction }}
-  {{ $css = $css | fingerprint }}
+  {{ $css = $css | fingerprint | resources.PostProcess }}
 {{ end }}
 <link href="{{ $css.Permalink }}" rel="stylesheet" /> 
