--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,27 +1,44 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* Tailwind base - put variables under: tailwind.config.js */
+@import "node_modules/tailwindcss/base";
+/* Tailwind component classes registered by plugins*/
+@import "node_modules/tailwindcss/components";
+/* Tailwind's utility classes - generated based on config file */
+@import "node_modules/tailwindcss/utilities";
 
-@layer components {
+/*
+#
+# Custom Utilities
+#
+*/
+
+@layer utilities {
   .button-primary {
-    @apply text-white font-bold py-2 px-4 rounded;
-    background-color: rgb(249, 142, 0);
+    @apply text-white font-bold py-2 px-4 rounded !important;
+    background-color: rgb(249, 142, 0) !important;
   }
 
   .button-primary:hover {
-    background-color: rgb(239, 130, 44);
+    background-color: rgb(239, 130, 44) !important;
   }
 
   .button-secondary {
-    @apply font-bold py-2 px-4 rounded;
-    color: rgba(255, 255, 255, 0.95);
-    background-color: rgb(60, 70, 202);
+    @apply font-bold py-2 px-4 rounded !important;
+    color: rgba(255, 255, 255, 0.95) !important;
+    background-color: rgb(60, 70, 202) !important;
   }
 
   .button-secondary:hover {
-    background-color: rgb(64, 138, 244);
+    background-color: rgb(64, 138, 244) !important;
   }
+}
 
+/*
+#
+# Components
+#
+*/
+
+@layer components {
   #header-inner-wrapper {
     background-color: rgba(230, 230, 236, 0.128);
   }
@@ -38,3 +55,51 @@
     border-color: rgb(249, 142, 0);
   }
 }
+
+/*
+#
+# Top border color of form inputs
+#
+*/
+
+/*
+.border-t {
+  border-color: rgb(239, 130, 44);
+}
+*/
+
+/*
+#
+# Header Background & Text
+#
+*/
+
+/*
+#header-inner-wrapper {
+  background-color: rgba(26, 38, 191, 0.9);
+}
+
+#brand-headline {
+  color: rgb(239, 130, 44);
+}
+
+#tagline-paragraph {
+  color: rgba(255, 255, 255, 0.95);
+}
+*/
+
+/*
+#
+# Content below the header
+#
+*/
+
+/*
+.prose h1 {
+  color: rgb(239, 130, 44);
+}
+
+.prose p {
+  color: white;
+}
+*/
